edit sitemap and index

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 <a href="css/style.scss">SCSS</a>
                 <a href="css/style.css">CSS</a>
                 <a href="css/responsive.css">Responsive CSS</a>
-                <a href="">Sitemap</a>
+                <a href="sitemap.xml">Sitemap</a>
             </div>
 
 
