--- a/index.html
+++ b/index.html
@@ -42,14 +42,12 @@
                 </nav>
             </div>
             <a name="slider">
-            <div id="slider">
+            <div id="slider" class="organize">
                 
                 <div id="info" data-aos="fade-up">
                     <div id="textHolder">
                     <h1>Pavle Zivanovic</h1>
                     <h2>Web Designer</h2>
-                    <p>pzivanovic@info.com</p>
-                    <p>+123456789</p>
                     <p>Belgrade, Serbia</p>
                 </div>
                 </div>
@@ -66,14 +64,24 @@
                 <h1 class="heading">Projects</h1>
                 <div id="project-holder">
                 <div class="project-block" data-aos="fade-up">
-                    <div class="project-image">
-                        <img src="img/project-zoe.jpg" alt="project-Restoran Zoe"/>
+                    <img src="img/6.png" alt="project1"/>
+                   
+                </div>
+                <div class="project-block" data-aos="fade-up">
+                        <img src="img/1.png" alt="project1"/>
                     </div>
-                    <div class="content">
-                        <h3 class="project-heading">Zoe Restraunt</h3>
-                        <p class="technologies">HTML/CSS</p>
-                        <p class="technologies">Not responsive</p>
-                    </div>
+                    <div class="project-block" data-aos="fade-up">
+                            <img src="img/2.png" alt="project1"/>
+                        </div>
+                        <div class="project-block" data-aos="fade-up">
+                                <img src="img/3.png" alt="project1"/>
+                            </div>
+                            <div class="project-block" data-aos="fade-up">
+                                    <img src="img/4.png" alt="project1"/>
+                                </div>
+                                <div class="project-block" data-aos="fade-up">
+                                        <img src="img/5.png" alt="project1"/>
+                                    </div>
                 </div>
             </div>
             </div>
