--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <div id="project" class="organize" data-aos="fade-up"
         data-aos-anchor-placement="top-bottom">
                 <h1 class="heading">Projects</h1>
+                <div class="line pr"></div>
                 <div id="project-holder">
                     <a href="#" class="pr"><div class="project-block" data-aos="fade-up">
                  <img src="img/6.png" alt="project1"/>
@@ -90,7 +91,8 @@
        
         <a name="skills">
             <div id="skills" class="organize" data-aos="fade-up">
-                    <h1 class="heading sk">Skills</h1>
+                    <h1 class="heading">Skills</h1>
+                    <div class="line sk"></div>
                     <div id="skill-holder">
                         <div id="group1" data-aos="fade-up">
                         <div class="skill">
@@ -176,7 +178,8 @@
                 </div>
                 <div id="about-text" data-aos="fade-up">
                     <div id="textHolder">
-                        <h1 class="heading ab">About me</h1>
+                        <h1 class="heading">About me</h1>
+                        <div class="line ab"></div>
                         <p>I'm Pavle, 20 years old passionate web designer based in Belgrade.</p>
                         <p>Currently studying at ICT school of vocational studies.</p>
                     </div>
@@ -186,7 +189,8 @@
         <a name="education">
             <div id="education" class="organize" data-aos="fade-up"
             data-aos-anchor-placement="top-bottom">
-                <h1 class="heading ed">Education</h1>
+                <h1 class="heading">Education</h1>
+                <div class="line ed"></div>
                 <div id="educationHolder">
                     <div id="educationBlocks">
                             <div id="educationBlockHolder">
@@ -211,7 +215,8 @@
         </a>
         <a name="contact">
             <div id="contact" class="organize" data-aos="fade-up">
-                    <h1 class="heading co">Contact</h1>
+                    <h1 class="heading">Contact</h1>
+                    <div class="line co"></div>
                     <div id="contactHolder">
                         <div id="info">
                             <div id="info-holder">
